server/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-example
  labels:
    app: go-example
    service: go-example
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: go-example
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-example-v1
  labels:
    app: go-example
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-example
      version: v1
  template:
    metadata:
      labels:
        app: go-example
        version: v1
    spec:
      containers:
      - name: go-example
        image: spider/server
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
